src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Category_Code__c</fullName>
        <label>Category Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUPS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Finished Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <picklist>
            <picklistValues>
                <fullName>LA Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tubular Battery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMF Battery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_PM__c</fullName>
        <label>No. Of PM</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProductUpsertId__c</fullName>
        <externalId>true</externalId>
        <label>ProductUpsertId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>COMPONENT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR INVERTER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR CHARGE CONTROLLER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR PCU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLAR PRODUCT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BATTERY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GENSET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTHER</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Group__c</fullName>
        <label>Sub Group</label>
        <picklist>
            <picklistValues>
                <fullName>150Ah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>135Ah</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <label>UoM</label>
        <picklist>
            <picklistValues>
                <fullName>Ea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Products</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Product_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Components</fullName>
        <active>true</active>
        <description>List of all Components</description>
        <label>Components</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finished_Goods</fullName>
        <active>true</active>
        <description>List of all FG</description>
        <label>Finished Goods</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>